--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,21 +5,150 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
-
+@import url('izitoast/dist/css/iziToast.min.css');
+@import url('simplelightbox/dist/simple-lightbox.min.css');
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33333;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
 
-  color: #242424;
   background-color: rgba(255, 255, 255, 0.87);
-
+  margin: 36px auto;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+#search {
+  display: flex;
+  gap: 8px;
+  margin: 0 auto 32px;
+  align-items: center;
+  justify-content: center;
+}
+input {
+  border-radius: 4px;
+  border: 1px solid #808080;
+  width: 272px;
+  height: 40px;
+}
+input:hover,
+input:focus {
+  border: 2px solid #000;
+}
+input:active {
+  border: 2px solid #4e75ff;
+}
+.form-btn {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  border: none;
+  color: #ffffff;
+  background-color: #4e75ff;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 91px;
+  height: 40px;
+}
+.form-btn:hover,
+.form-btn:focus {
+  background-color: #6c8cff;
+}
+.btn {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 125px;
+  height: 40px;
+}
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  margin-bottom: 32px;
+}
+.gallery-item {
+  border: 1px solid #808080;
+  width: 360px;
+}
+.gallery-image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+.list-img {
+  padding: 4px 20px;
+  display: flex;
+  gap: 28px;
+  align-items: flex-start;
+  justify-content: center;
+
+  height: 48px;
+}
+.item-img {
+  width: calc((100% - 48px) / 4);
+}
+.title-img {
+}
+.text-img {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+.loader {
+  width: 8px;
+  height: 40px;
+  border-radius: 4px;
+  display: block;
+  margin: 20px auto;
+  position: relative;
+  background: currentColor;
+  color: aquamarine;
+  box-sizing: border-box;
+  animation: animloader 0.3s 0.3s linear infinite alternate;
+}
+
+.loader::after,
+.loader::before {
+  content: '';
+  width: 8px;
+  height: 40px;
+  border-radius: 4px;
+  background: currentColor;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 20px;
+  box-sizing: border-box;
+  animation: animloader 0.3s 0.45s linear infinite alternate;
+}
+.hidden {
+  display: none;
+}
+.loader::before {
+  left: -20px;
+  animation-delay: 0s;
+}
+
+@keyframes animloader {
+  0% {
+    height: 48px;
+  }
+  100% {
+    height: 4px;
+  }
 }
